--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,6 @@
 {% else %}
     <p>You are not logged In</p>
     <a href="{% url 'login' %}">Log In</a>
-    <a href="{% url 'logout' %}">Sign Up</a>
+    <a href="{% url 'signup' %}">Sign Up</a>
 {% endif %}
 {% endblock content %}
