she go say i no be woman

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
  Hi {{ user.username }}
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
-    <p>You are not logged In</p>
+    <p>You are not logged In So Do something about it </p>
     <a href="{% url 'login' %}">Log In</a>
     <a href="{% url 'signup' %}">Sign Up</a>
 {% endif %}
